--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,7 @@
     logbranch = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --no-merges develop..
     recheckout = "!sh -c 'git checkout master -f && git pull && git branch -D $0 && git checkout $0'"
 	  releaselist = "log --merges --first-parent release --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit"
-    pushf = push --force-with-lease origin $branch 
-    pushff = push -f origin $branch 
-    current = "!sh -c 'git branch -a | grep \"*\" | cut -d \" \" -f 2'"
+    cur = "!sh -c 'git branch -a | grep \"*\" | cut -d \" \" -f 2'"
+    pushf = "!sh -c 'BRANCH=`git current` && git push --force-with-lease origin $BRANCH'"
+    pushff = "!sh -c 'BRANCH=`git current` && git push -f origin $BRANCH'"
+    
