--- a/.gitconfig
+++ b/.gitconfig
@@ -35,6 +35,6 @@
     recheckout = "!sh -c 'git checkout master -f && git pull && git branch -D $0 && git checkout $0'"
 	  releaselist = "log --merges --first-parent release --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit"
     cur = "!sh -c 'git branch -a | grep \"*\" | cut -d \" \" -f 2'"
-    pushf = "!sh -c 'BRANCH=`git current` && git push --force-with-lease origin $BRANCH'"
-    pushff = "!sh -c 'BRANCH=`git current` && git push -f origin $BRANCH'"
+    pushf = "!sh -c 'BRANCH=`git cur && git push --force-with-lease origin $BRANCH'"
+    pushff = "!sh -c 'BRANCH=`git cur && git push -f origin $BRANCH'"
     
