--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,24 @@
 [user]
-	name = Frode Nilsen
-	email = frode.nilsen@ruter.no
+    name = Frode Nilsen
+    email = frode.nilsen@ruter.no
 
 [alias]
     find-merge = "!sh -c 'commit=$0 && branch=${1:-HEAD} && (git rev-list $commit..$branch --ancestry-path | cat -n; git rev-list $commit..$branch --first-parent | cat -n) | sort -k2 | uniq -f1 -d | sort -n | tail -1 | cut -f2'"
     show-merge = "!sh -c 'merge=$(git find-merge $0 $1) && [ -n \"$merge\" ] && git show $merge'"
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit
-    logbranch = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --no-merges develop..
+    lg2 = log --pretty=format:'%Cred%h%Creset %Creset %s%b %Creset' --abbrev-commit --no-merges
+    lgmrc = log --pretty=format:'%Cred%h%Creset %Creset %s%b %Creset' --abbrev-commit --no-merges master..
+    lgmr = "!sh -c 'git log --pretty=format:'%Cred%h%Creset %Creset %s%b %Creset' --abbrev-commit --no-merges master..$0'"
+    logbranch = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --no-merges --first-parent master..
     recheckout = "!sh -c 'git checkout master -f && git pull && git branch -D $0 && git checkout $0'"
-	releaselist = "log --merges --first-parent release --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit"
+    releaselist = "log --merges --first-parent release --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit"
     cur = "!sh -c 'git branch -a | grep \"*\" | cut -d \" \" -f 2'"
     pushf = "!sh -c 'BRANCH=`git cur` && git push --force-with-lease origin $BRANCH'"
     pushff = "!sh -c 'BRANCH=`git cur` && git push -f origin $BRANCH'"
-	up = fetch origin master:master
+    up = fetch origin master:master
     cob = "checkout -b"
-	co = "checkout"
-	cp = "cherry-pick"
-	cos = "!bash -c 'echo `git branch -a | grep $0 | head -n 1`'"
-
+    co = "checkout"
+    cp = "cherry-pick"
+    cos = "!bash -c 'echo `git branch -a | grep $0 | head - 1`'"
+    pushb = "!sh -c 'BRANCH=`git rev-parse --abbrev-ref HEAD` && git push -u origin $BRANCH'"
+    latestbranches = "for-each-ref --sort=committerdate refs/heads/ --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'"
